# rgb-doors

./: Cargo.toml  LICENSE  index.html
.github/workflows/: release.yaml
assets/AsepriteFiles/: Char.aseprite  level-tileset.aseprite  plates.aseprite
assets/levels/: levels.ldtk
assets/sprites/: h_lasers.aseprite  lift.aseprite  plates.aseprite  player.aseprite  v_lasers.aseprite
credits/: CREDITS.md
src/: audio.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs
src/actions/: game_control.rs  mod.rs
src/levels/: camera_fit.rs  door_panel.rs  lasers.rs  level_transition.rs  mod.rs  panel.rs  reset.rs  tiles.rs
src/player/: color_control.rs  death.rs  forbid_movement.rs  ignore_doors.rs  mod.rs  movement.rs  movement_effects.rs  open_lasers.rs
src/ui/: bg_color_tween.rs  buttons_styles.rs  color_control.rs  color_control_view.rs  debug.rs  mod.rs  notifications.rs  wasd.rs
