[package]
name = "rgb-doors"
version = "0.1.0"
publish = false
authors = ["Ilia Kuznetcov", "Georgi Glazkov"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
bevy = { version = "0.10" }
bevy_ecs_ldtk = { version = "0.6", features = ["default", "atlas"] }
bevy_kira_audio = { version = "0.15" }
bevy_asset_loader = { version = "0.15" }
bevy_mod_aseprite = { version = "0.4" }
bevy-inspector-egui = { version = "0.18" }

winit = { version = "0.28" }
image = { version = "0.24" }

[build-dependencies]
embed-resource = "1.4"
